# feishubot

./: .gitignore  README.md  feishubot.py  pyproject.toml
tests/: test_feishubot.py
